force-app/main/default/objects/Location_Passport__c/Location_Passport__c.object-meta.xml
<CustomObject>
    <label>Location Passport</label>
    <nameField>
        <displayFormat>LP-{00000000}</displayFormat>
        <label>Location Passport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Passports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>