force-app/main/default/objects/Location_Passport__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Location Passports</relationshipLabel>
    <relationshipName>Location_Passports</relationshipName>
    <type>Lookup</type>
</CustomField>