force-app/main/default/objects/Location_Passport__c/fields/Attention_points_for_execution__c.field-meta.xml
<CustomField>
    <fullName>Attention_points_for_execution__c</fullName>
    <label>Attention points for execution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>