force-app/main/default/objects/Location_Passport__c/fields/Closing_Days__c.field-meta.xml
<CustomField>
    <fullName>Closing_Days__c</fullName>
    <label>Closing Days</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>