force-app/main/default/objects/Location_Passport__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Location Passports</relationshipLabel>
    <relationshipName>Location_Passports</relationshipName>
    <type>Lookup</type>
</CustomField>