force-app/main/default/objects/Location_Passport__c/fields/Opening_hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_hours__c</fullName>
    <label>Opening hours</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>